--- a/ChatApp/ChatAppWithSignalR/ChatAppWithSignalR.csproj
+++ b/ChatApp/ChatAppWithSignalR/ChatAppWithSignalR.csproj
@@ -6,10 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="wwwroot\lib\signalr\" />
+    <Folder Include="Services\" />
+    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
