--- a/ChatApp/ReactFrontend/react-chat/public/manifest.json
+++ b/ChatApp/ReactFrontend/react-chat/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "SignalR with React Chat App",
+  "name": "SignalR with React Chat App",
   "icons": [
     {
       "src": "favicon.ico",
