--- a/ChatApp/ReactFrontend/react-chat/package.json
+++ b/ChatApp/ReactFrontend/react-chat/package.json
@@ -10,7 +10,8 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "tslib": "^1.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
