Creating some tests for components.

--- a/ChatApp/ReactFrontend/react-chat/package.json
+++ b/ChatApp/ReactFrontend/react-chat/package.json
@@ -13,6 +13,10 @@
     "redux-thunk": "^2.3.0",
     "tslib": "^1.9.3"
   },
+  "devDependencies": {
+    "enzyme": "^3.4.1",
+    "enzyme-adapter-react-16": "^1.2.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
